--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 }
 
 
+.ls {
+    box-shadow: inset;
+    font: 2em sans-serif;
+    width: fit-content;
+}
+
 a {
     color: #000;
     background-color: aqua;
